--- a/styles.css
+++ b/styles.css
@@ -1,132 +1,291 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Mulish:wght@200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Mulish:wght@200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css");
 
 * {
-    margin:0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --font-primary: "Baloo Thambi 2", sans-serif;
+  --font-secundary: "Source Sans Pro", sans-serif;
+  --font-action: "Mulish", sans-serif;
+}
+
+.hamburguer {
+  width: 3rem;
+  height: 3rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  position: fixed;
+
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+
+  cursor: pointer;
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+}
+
+.line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: #b22222;
+  box-shadow: 0.1rem 0.1rem 1px #6f0000;
+  transition: transform 1s;
+}
+
+.show-menu #line1 {
+    transform: rotate(45deg) translate(.3rem, .90rem);
+}
+
+.show-menu #line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3 {
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+}
+
+.hamburguer span {
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 2px 3px 3px 2px;
+
+    color: #edeaea;
+    font-family: var(--font-action);
+
+    background-color: #b22222;
+    opacity: 0;
+}
+
+.hamburguer span::before {
+    content: "";
+    position: absolute;
+
+    border-right: .6rem solid #b22222;
+    border-top: .6rem solid transparent;
+    border-left: .6rem solid transparent;
+    border-bottom: .6rem solid transparent;
+    left: -1.05rem;
+}
+
+.show-menu .hamburguer:hover span {
+    opacity: 1;
 }
 
 header {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 
-    overflow: hidden;
-    position: relative;
+  overflow: hidden;
+  position: relative;
 }
 
 .img-wrapper {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.8);    
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
-    opacity: 0.6;
-    animation: zoom 7s;
+  opacity: 0.6;
+  animation: zoom 7s;
 }
 
 @keyframes zoom {
-    0%{
-        transform: scale(1.3);
-    }
-    100%{
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .banner {
-    position: absolute;
-    top: 45%;
-    left: 7%;
+  position: absolute;
+  top: 45%;
+  left: 7%;
 }
 
-.banner h1, h2 {    
-    font-family: "Baloo Thambi 2", sans-serif;
-    font-weight: 200;
-    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
-    line-height: 4rem;
-    
-    color: #FFA500;
+.banner h1, h2 {
+  font-family: var(--font-primary);
+  font-weight: 200;
+  text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
+  line-height: 4rem;
 
-    animation: moveBanner 1.3s forwards;
-    opacity: 0;
+  color: #ffa500;
+
+  animation: moveBanner 1.3s forwards;
+  opacity: 0;
 }
 
 .banner h1 {
-    font-size: 5rem;    
-    
-    color: #1E90FF;
+  font-size: 5rem;
+
+  color: #1e90ff;
 }
 
 .banner h2 {
-    font-size: 3.5rem;
-    color: #1E90FF;
+  font-size: 3.5rem;
+  color: #1e90ff;
 
-    margin-left: 10%;
-    margin-bottom: 5%;
+  margin-left: 10%;
+  margin-bottom: 5%;
 }
 
-#h2-header{
-    font-size: 3.5rem;
-    color: #B22222;
+#h2-header {
+  font-size: 3.5rem;
+  color: #b22222;
 
-    margin-left: 3%;
-    margin-bottom: 2.5rem;
+  margin-left: 3%;
+  margin-bottom: 2.5rem;
 }
 
 .banner p {
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: 400;
-    font-size: 2.5rem;
-    text-shadow: .2rem .3rem 2px rgba(0, 0, 0, .4);
-    color: #87CEFA;
+  font-family: var(--font-secundary);
+  font-weight: 400;
+  font-size: 2.5rem;
+  text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4);
+  color: #87cefa;
 
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 
-    opacity: 0;
-    animation: moveBanner 1.7s forwards;
+  opacity: 0;
+  animation: moveBanner 1.7s forwards;
 }
 
 .banner button {
-    font-family: "Mulish", sans-serif;
-    letter-spacing: .05rem;
-    text-transform: uppercase;
-    color: #87CEFA;
-    text-shadow: .1rem .2rem 2px rgba(87, 86, 86, 0.4);
+  font-family: var(--font-action);
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+  color: #87cefa;
+  text-shadow: 0.1rem 0.2rem 2px rgba(87, 86, 86, 0.4);
 
-    background: #200122;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #6f0000, #B22222);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6f0000, #B22222); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border: none;
-    border-radius: 5px;
-    padding: .4rem 1.4rem;
+  background: #200122; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #6f0000, #b22222); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right,#6f0000,#b22222); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: none;
+  border-radius: 5px;
+  padding: 0.4rem 1.4rem;
 
-    cursor: pointer;
+  cursor: pointer;
 
-    opacity: 0;
-    animation: moveBanner 1.8s forwards;
+  opacity: 0;
+  animation: moveBanner 1.8s forwards;
 }
 
 .banner button:hover {
-    color: #000;
-    opacity: 0.8;
-
-    text-shadow: .1rem .2rem 2px rgba(0, 0, 0, .4);
+  color: #000;
+  opacity: 0.8;
+  text-shadow: 0.1rem 0.1rem 1px rgba(0, 0, 0, 0.4);
 }
 
 @keyframes moveBanner {
-    0%{
-    transform: translateY(10rem) rotateY(.35deg);
-    }
-    100%{
-        transform: translateY(0) rotateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(10rem) rotateY(0.35deg);
+  }
+  100% {
+    transform: translateY(0) rotateY(0);
+    opacity: 1;
+  }
+}
+
+.sidebar {
+  width: 20rem;
+  height: 100vh;
+
+  top: 0;
+  right: -20rem;
+  position: fixed;
+
+  transition: all 1s;
+
+  background-color: #f8f7f7;
+}
+
+.show-menu .sidebar {
+    right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-item {
+  text-align: left;
+  margin-bottom: 0.5rem;
+}
+
+.menu-link {
+  font-family: var(--font-action);
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #b22222;
+
+  transition: color 1s;
+}
+
+.menu-link:hover {
+  color: #6f0000;
+}
+
+.social-media {
+  background-color: rgba(255, 0, 0, 0.77); 
+
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+
+  padding: 3px 0;
+
+  width: 100%;
+  height: 6vh;
+  bottom: 2rem;
+}
+
+.social-media i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 2rem;
+  height: 2rem;
+
+  color: #edeaea;
+  font-size: 2rem;
+
+  border: solid 1px #cacaca;
+  border-radius: 5%;
+  transition: color border 1s;
+}
+
+.social-media i:hover {
+  border: solid 2px #6f0000;
+  color: #6f0000;
 }
