--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ header {
 }
 
 .sidebar {
-  width: 20rem;
+  width: 19.7rem;
   height: 100vh;
 
   top: 0;
@@ -224,6 +224,7 @@ header {
   transition: all 1s;
 
   background-color: #f8f7f7;
+  z-index: 2;
 }
 
 .show-menu .sidebar {
@@ -244,7 +245,7 @@ header {
 
 .menu-link {
   font-family: var(--font-action);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #b22222;
 
@@ -253,6 +254,7 @@ header {
 
 .menu-link:hover {
   color: #6f0000;
+  font-weight: 700;
 }
 
 .social-media {
@@ -262,11 +264,11 @@ header {
   display: flex;
   justify-content: space-evenly;
 
-  padding: 3px 0;
+  padding: 6px 0;
 
   width: 100%;
   height: 6vh;
-  bottom: 2rem;
+  bottom: 1.5rem;
 }
 
 .social-media i {
@@ -288,4 +290,383 @@ header {
 .social-media i:hover {
   border: solid 2px #6f0000;
   color: #6f0000;
+}
+
+.conhecimentos {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  row-gap: 1.2rem;
+}
+
+.conhecimento:nth-child(1){
+  grid-column: 4 / 7;
+  grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2){
+  grid-column: 3 / 6;
+  grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3){
+  grid-column: 4 / 7;
+  grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4){
+  grid-column: 11 / 14;
+  grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5){
+  grid-column: 12 / 15;
+  grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6){
+  grid-column: 11 / 14;
+  grid-row: 5 / -1;
+}
+
+.sessao-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.sessao-header h1 {
+  font-family: var(--font-primary);
+  font-size: 3rem;
+  color: #4b4b4b;
+
+  border-bottom: solid 3px #b22222;
+  margin-bottom: 2.5rem;
+}
+
+.conhecimento-header {
+  display: flex;
+  align-items: center;
+  color: #4b4b4b;
+}
+
+.conhecimento-header i {
+  font-size: 2.5rem;
+}
+
+.conhecimento-header h3 {
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+
+.conhecimento-text {
+  font-family: var(--font-secundary);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.conhecimentos-img-wrapper {
+  grid-column: 7 / 11;
+  grid-row: 2 / 6;
+  width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.projetos {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 4rem;
+
+}
+
+.card {
+  width: 18rem;
+  height: 25rem;
+  position: relative;
+}
+
+.card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  
+  background-color: rgb(44, 43, 43);  
+  border-radius: .5rem;
+}
+
+.card-img-wrapper img {
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+
+  opacity: .9;
+  border-radius: .5rem;
+  transition: opacity .3s;
+}
+
+.card:hover .card-img-wrapper img {
+  opacity: .3;
+}
+
+.card-info {
+  position: absolute;
+  bottom: 0;
+  padding: 2rem;
+  
+  opacity: 0;
+  visibility: hidden;
+  text-shadow: 0.1rem 0.2rem 0.3rem rgba(0, 0, 0, .4);
+  transition: all .2s;
+}
+
+.card-info h2 {
+  font-family: var(--font-primary);
+  font-size: 2rem;
+  font-weight: 500;
+  color: #b22222;
+  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.2);
+}
+
+.card-info h3 {
+  font-family: var(--font-action);
+  font-weight: bolder;
+  color: #fff;
+
+  margin-bottom: 1.5rem;
+}
+
+.card-info p {
+  width: 80%;
+  
+  margin-bottom: 1.5rem;
+
+  font-family: var(--font-secundary);
+  color: #fff;
+  font-weight: 500;
+  text-shadow: none;
+}
+
+.btn {
+  font-family: var(--font-action);
+  font-size: .7rem;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+  color: #87cefa;
+  text-shadow: 0.1rem 0.2rem 2px rgb(87 86 86 / 40%);
+
+  background: #200122;
+  background: -webkit-linear-gradient(to right, #6f0000, #b22222);
+  background: linear-gradient(to right,#6f0000,#b22222);
+ 
+  border: none;
+  border-radius: 5px;
+  padding: 0.4rem 1.4rem;
+  
+  cursor: pointer;
+}
+
+.card-info button {
+  width: 8rem;
+  height: 2.5rem;
+}
+
+.card:hover .card-info {
+  bottom: 1.5rem;
+  opacity: 1;
+  visibility: visible;
+}
+
+.sessao-contato {
+  width: 100%;
+  height: 100vh;
+
+  background-color: #272727;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contato-wrapper {
+  width: 50%;
+  height: 30rem;
+  display: flex;
+
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
+}
+
+.contato-left {
+  width: 35%;
+  background:
+    linear-gradient(rgba(10,10,10, 0.2),rgba(22, 22, 22, 0.9)),
+    url(./resource/img/bg-form.jpg);
+  background-size: cover;
+}
+
+.contato-right {
+  width: 65%;
+  background-color: #f8f7f7;
+  padding: 1rem 3rem 3rem 3rem;
+}
+
+.contato-right h1{
+  border-bottom: 2px solid #b22222;
+}
+
+.sessao-contato h1 {
+  width: 100%;
+  text-align: center;
+  font-family: var(--font-primary);
+  color: #272727;
+  font-size: 3rem;
+  font-weight: lighter;
+}
+
+.sessao-contato form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-group{
+  position: relative;
+}
+
+.field {
+  width: 20rem;
+  height: 3rem;
+
+  background: transparent;
+  border: none;
+  border-bottom: 2px dashed #636363;
+  margin: 1rem 0;
+
+  font-size: 1.5rem;
+  font-family: var(--font-secundary);
+
+  outline: none;
+}
+
+.input-group textarea {
+  padding:  1rem;
+  max-width: 18rem;
+  max-height: 3rem;
+  margin-bottom: 3rem;
+}
+
+.field-label {
+  position: absolute;
+  left: 0;
+  top: 2rem;
+  font-family: var(--font-secundary);
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  transition: all 0.3s;
+}
+
+.field:focus ~ label{
+  top: 0;
+  font-size: 1rem;
+}
+
+.field:focus {
+  border-bottom: 1px solid #b22222;
+}
+
+.btn-submit {
+ width: 100%;
+ height: 2rem;
+
+ text-transform: uppercase;
+ font-size: 1rem;
+}
+
+.preenchido {
+  pointer-events: none;
+}
+
+.sessao-orcamento {
+  width: 100%;
+  height: 100vh;
+  background-image: url("./resource/img/bg-orcamento_1.png");
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.orcamento-wrapper {
+  width: 60%;
+  height: 80%;
+  background-color: #ffffff99;
+  border-radius: 10px;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.sessao-orcamento h1 {
+  position: absolute;
+  top: -2.5rem;
+  left: 2rem;
+
+  background: #200122;
+  background: -webkit-linear-gradient(to right, #6f0000, #b22222);
+  background: linear-gradient(to right,#6f0000,#b22222);
+
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 0 3rem;
+
+  font-family: var(--font-primary);
+  font-weight: lighter;
+  font-size: 3rem;
+  color: rgb(228, 225, 225);
+}
+
+.sessao-orcamento form {
+  margin: 4rem;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+.sessao-orcamento label {
+  font-family: var(--font-action);
+  font-size: 1.5rem;
+}
+
+.sessao-orcamento input[type="number"]{
+  width: 4rem;
+
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  padding: 0.3rem;
+}
+
+.btn-orcamento {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  padding: 1rem;
+  cursor: pointer;
+  grid-column: 2;
+}
+
+.sessao-orcamento input[type="checkbox"]{
+  margin-left: 0;
+  width: 2rem;
+  border-radius: 5px;
+  outline: none;
+
+  color: #272727;
 }
