--- a/styles.css
+++ b/styles.css
@@ -144,8 +144,6 @@ header {
   text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
   line-height: 4rem;
 
-  color: #ffa500;
-
   animation: moveBanner 1.3s forwards;
   opacity: 0;
 }
@@ -153,12 +151,12 @@ header {
 .banner h1 {
   font-size: 5rem;
 
-  color: #1e90ff;
+  color: #b22222;;
 }
 
 .banner h2 {
   font-size: 3.5rem;
-  color: #1e90ff;
+  color: #b22222;;
 
   margin-left: 10%;
   margin-bottom: 5%;
@@ -166,7 +164,7 @@ header {
 
 #h2-header {
   font-size: 3.5rem;
-  color: #b22222;
+  color: #1e90ff;
 
   margin-left: 3%;
   margin-bottom: 2.5rem;
@@ -176,7 +174,7 @@ header {
   font-family: var(--font-secundary);
   font-weight: 400;
   font-size: 2.5rem;
-  text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 0.1rem 0.2rem 1px rgba(0, 0, 0, 0.3);
   color: #87cefa;
 
   margin-bottom: 1rem;
